# codex_token_usage

./: .gitignore  AGENT.md  CODEBASE.md  README.md  git-commit.md  pyproject.toml
.github/workflows/: linux-binary.yml
packaging/: build-linux-binary.sh  install-linux.sh  pyinstaller_entry.py
src/codex_token_usage/: __init__.py  cli.py  forecast.py  keybindings.py  loader.py  models.py  pricing.py  report.py  theme.py  tui.py
src/codex_token_usage/report/: __init__.py  forecast_display.py  formatting.py  models.py  renderers.py  rows.py
src/codex_token_usage/theme/: __init__.py  config.py  models.py  presets.py  rendering.py  setup_wizard.py
src/codex_token_usage/tui/: __init__.py  app.py  forecast_display.py  formatting.py  prompts.py  secret_codes.py  settings_actions.py  settings_flag_picker.py  settings_model.py  settings_rendering.py  settings_screen.py  state.py  theme_renderer.py  usage_rates.py  view_overlays.py  views.py
tests/: test_cli.py  test_forecast.py  test_keybindings.py  test_loader.py  test_pricing.py  test_report.py  test_theme.py  test_tui_state.py
