[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-token-usage"
version = "2.0.0"
description = "Local terminal UI and reports for Codex CLI token usage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
codex-token-usage = "codex_token_usage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"codex_token_usage.theme" = ["flag_presets.json"]
